examples/test/testpolicy2975.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2975
  namespace: namespace480
spec:
  podSelector:
    matchLabels:
      key42: value37
      key22: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value49
          key29: value19
      podSelector:
        matchLabels:
          key34: value6
          key7: value41
          key2: value47
